--- a/src/com/tegik/facelectr/ad_actionButton/reports/EM_FET_Plantilla_Factura_VentaJR.jrxml
+++ b/src/com/tegik/facelectr/ad_actionButton/reports/EM_FET_Plantilla_Factura_VentaJR.jrxml
@@ -66,7 +66,7 @@
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT i.ad_org_id org,
-       '?re=' ||COALESCE(oi.taxid,'') || '=' ||bp.taxid|| '&tt=' ||ROUND(I.GRANDTOTAL,2) || '&id=' ||COALESCE(i.em_fet_foliofiscal,'') AS strqrcode,
+       '?re=' ||COALESCE(oi.taxid,'') || '&rr=' ||bp.taxid|| '&tt=' ||ROUND(I.GRANDTOTAL,6) || '&id=' ||COALESCE(i.em_fet_foliofiscal,'') AS strqrcode,
        i.em_fet_docstatus docstatus,
        i.documentno no_factura,
        i.dateinvoiced fecha_factura,
@@ -77,7 +77,7 @@
        dt.docbasetype,
        o.name organizacion,
        COALESCE(o.social_name,'') social_name,
-       CASE
+       CASE 
          WHEN oi.em_fet_personamoral = 'Y' THEN 'PERSONA MORAL RÉGIMEN GENERAL.'
          ELSE 'PERSONA FÍSICA'
        END AS regimen,
